<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select">Day</string>
    <string name="restuarant_name">Restuarant Name</string>
    <string name="restaurant_address">Restaurant Address</string>
    <string name="list_of_restaurants">List of Restaurants</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="sort_and_filter">Sort and Filter</string>
    <string name="sort_by">Sort by</string>
    <string name="alphabetical_order">Alphabetical Order</string>
    <string name="cuisine_type">Cuisine Type</string>
    <string name="reset_all">Reset All</string>
    <string name="apply">Apply</string>
    <string name="medals">Medals</string>
    <string name="rating">Rating</string>
    <string name="message_error_unknown_error">Something went wrong</string>
    <string name="message_error_internet_error">Internet connection lost</string>
    <string name="message_error_server_error">Server not found</string>
    <string name="filter_by">Filter by</string>
    <string name="search">Search</string>
    <string-array name="filter_options">
        <item>Top Rated</item>
        <item>A-Z</item>
        <item>Z-A</item>
    </string-array>


</resources>