<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".restaurantListPage">

    <!-- Banner TextView -->
    <TextView
        android:id="@+id/bannerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_of_restaurants"
        android:textSize="24sp"
        android:textColor="@android:color/holo_purple"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Spinner for filtering -->
    <Spinner
        android:id="@+id/filterSpinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:prompt="@string/filter_by"
        app:layout_constraintTop_toBottomOf="@id/bannerTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- SearchView for searching restaurants -->
    <SearchView
        android:id="@+id/searchView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:queryHint="@string/search"
        app:layout_constraintTop_toBottomOf="@id/filterSpinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- ListView for displaying restaurants -->
    <ListView
        android:id="@+id/restaurantListView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/searchView"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/list_item" />

</androidx.constraintlayout.widget.ConstraintLayout>